Fix URL wrapping in twitter widget

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -6,7 +6,7 @@
 }
 @media only screen and (min-width: 640px) {
     #social {
-        padding-left: none;
+        padding-left: 0;
         padding-top: 1em;
     }
 }
@@ -22,6 +22,7 @@
 }
 p.tweet {
     margin-bottom: 0;
+	word-wrap: break-word;
 }
 p.tweet > a {
     color: #333;
